# yt-fetch

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/yt_fetch/: __init__.py  cli.py  fetcher.py
tests/: test_fetcher.py
